--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -11,21 +11,20 @@
 <h1>Our menu</h1>
 
 <div class="row">
-  <div id="chicken" class="col-lg-4 col-md-6 col-sm-12"><p>Chicken</p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    Duis ex est, pretium non pretium quis, mattis ac lacus. Vestibulum at semper purus, eu fermentum massa. Morbi ultricies quis dolor ut hendrerit.
+  <div id="chicken" class="lg md-2 sm-1"><p>Chicken</p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+    Duis ex est, pretium non pretium quis, mattis ac lacus. Morbi ultricies quis dolor ut hendrerit.
     Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas semper lacinia sollicitudin. Praesent ullamcorper leo ac tempor molestie.
     Vestibulum mi erat, pharetra non facilisis eget, maximus non sapien.
     </div>
-  <div id="beef" class="col-lg-4 col-md-6 col-sm-12"><p>Beef</p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    Donec enim diam, tempor eu nisl nec, consequat condimentum felis. Vestibulum eu elementum neque, ut feugiat ligula.
-    Vivamus vitae tincidunt dolor. Duis quis sollicitudin erat. Morbi tincidunt ac sapien pellentesque faucibus.
-    Ut lobortis, quam nec fermentum mattis, nunc risus scelerisque augue, a condimentum tortor risus non erat.
+  <div id="beef" class="lg md-2 sm-1"><p>Beef</p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+    Duis ex est, pretium non pretium quis, mattis ac lacus. Vestibulum at semper purus, eu fermentum massa.
+    Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas semper lacinia sollicitudin. Praesent ullamcorper leo ac tempor molestie.
+    Vestibulum mi erat, pharetra non facilisis eget, maximus non sapien.
 
     </div>
-  <div id="sushi" class="col-lg-4 col-md-12 col-sm-12"><p>Sushi</p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-    Mauris turpis dolor, sodales vitae sem consequat, faucibus consectetur libero. Duis aliquet laoreet quam quis aliquet.
-    Proin a felis accumsan, laoreet metus a, ullamcorper arcu. Nulla odio nunc, dignissim pulvinar ultrices ut, luctus quis mauris.
-    Duis aliquet laoreet quam quis aliquet.
+  <div id="sushi" class="lg md-1 sm-1"><p>Sushi</p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+    Duis ex est, pretium non pretium quis, mattis ac lacus. Vestibulum at semper purus, eu fermentum massa. Morbi ultricies quis dolor ut hendrerit.
+    Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas semper lacinia sollicitudin. Praesent ullamcorper leo ac tempor molestie.
     </div>
 </div>
 
