--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css\style.css">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css\style.css" />
     <title>Sabroso</title>
-</head>
-<body>
+  </head>
+  <body>
+    <h1>Our menu</h1>
 
-<h1>Our menu</h1>
-
-<div class="row">
-  <div id="chicken" class="lg md-2 sm-1"><p>Chicken</p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    Duis ex est, pretium non pretium quis, mattis ac lacus. Morbi ultricies quis dolor ut hendrerit.
-    Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas semper lacinia sollicitudin. Praesent ullamcorper leo ac tempor molestie.
-    Vestibulum mi erat, pharetra non facilisis eget, maximus non sapien.
+    <div class="row">
+      <div id="chicken" class="lg md-2 sm-1">
+        <p>Chicken</p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ex est,
+        pretium non pretium quis, mattis ac lacus. Morbi ultricies quis dolor ut
+        hendrerit. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+        Maecenas semper lacinia sollicitudin. Praesent ullamcorper leo ac tempor
+        molestie. Vestibulum mi erat, pharetra non facilisis eget, maximus non
+        sapien.
+      </div>
+      <div id="beef" class="lg md-2 sm-1">
+        <p>Beef</p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ex est,
+        pretium non pretium quis, mattis ac lacus. Vestibulum at semper purus,
+        eu fermentum massa. Interdum et malesuada fames ac ante ipsum primis in
+        faucibus. Maecenas semper lacinia sollicitudin. Praesent ullamcorper leo
+        ac tempor molestie. Vestibulum mi erat, pharetra non facilisis eget,
+        maximus non sapien.
+      </div>
+      <div id="sushi" class="lg md-1 sm-1">
+        <p>Sushi</p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ex est,
+        pretium non pretium quis, mattis ac lacus. Vestibulum at semper purus,
+        eu fermentum massa. Morbi ultricies quis dolor ut hendrerit. Interdum et
+        malesuada fames ac ante ipsum primis in faucibus. Maecenas semper
+        lacinia sollicitudin. Praesent ullamcorper leo ac tempor molestie.
+      </div>
     </div>
-  <div id="beef" class="lg md-2 sm-1"><p>Beef</p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    Duis ex est, pretium non pretium quis, mattis ac lacus. Vestibulum at semper purus, eu fermentum massa.
-    Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas semper lacinia sollicitudin. Praesent ullamcorper leo ac tempor molestie.
-    Vestibulum mi erat, pharetra non facilisis eget, maximus non sapien.
-
-    </div>
-  <div id="sushi" class="lg md-1 sm-1"><p>Sushi</p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    Duis ex est, pretium non pretium quis, mattis ac lacus. Vestibulum at semper purus, eu fermentum massa. Morbi ultricies quis dolor ut hendrerit.
-    Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas semper lacinia sollicitudin. Praesent ullamcorper leo ac tempor molestie.
-    </div>
-</div>
-
-</body>
+  </body>
 </html>
